--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^0.19.2",
     "body-parser": "^1.19.0",
-    "http": "0.0.1-security"
+    "http": "0.0.1-security",
+    "node-schedule": "^1.3.2"
   }
 }
