edited about component #5

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,17 +1,21 @@
-FROM node:14.4.0-alpine3.12 AS build
+#FROM node:14.4.0-alpine3.12 AS build
+#
+## Install
+#WORKDIR /usr/src/app
+#COPY package.json ./
+#RUN npm install
+#
+## Build
+#COPY tsconfig* ./
+#COPY angular.json ./
+#COPY src ./src
+#RUN npm run build
+#
+## Image
+#FROM nginx:1.19.0-alpine
+#COPY docker/default.conf /etc/nginx/conf.d/
+#COPY --from=build /usr/src/app/dist/frontend /usr/share/nginx/html
 
-# Install
-WORKDIR /usr/src/app
-COPY package.json ./
-RUN npm install
-
-# Build
-COPY tsconfig* ./
-COPY angular.json ./
-COPY src ./src
-RUN npm run build
-
-# Image
 FROM nginx:1.19.0-alpine
-COPY docker/default.conf /etc/nginx/conf.d/
-COPY --from=build /usr/src/app/dist/frontend /usr/share/nginx/html
+COPY /dist/frontend /usr/share/nginx/html
+COPY docker/default.conf /etc/nginx/conf.d/ 
